Implement core game mechanics and character classes for Retro Multithreading Adventure
- Added GameCharacter class to manage character attributes and inventory.
- Implemented GameWorld class to handle game logic and events.
- Created character classes: Knight, Thief, and Wizard, each with unique abilities and messages.
- Developed GuiApp for user interface interactions and game flow.
- Integrated ApiClient for fetching advice during gameplay.
- Established multithreading capabilities using Phaser for managing game parts.
- Updated Maven configuration to include new class files.